@startuml

title __MODEL's Class Diagram__\n

  namespace br.com.apibancaria {
    namespace model {
      class br.com.apibancaria.model.ChavePix {
          - ativa : Boolean
          - chave : String
          - dataCadastro : LocalDateTime
          - id : Long
          + ChavePix()
          + ChavePix()
          + getAtiva()
          + getChave()
          + getConta()
          + getDataCadastro()
          + getId()
          + getTipo()
          + setAtiva()
          + setChave()
          + setConta()
          + setDataCadastro()
          + setId()
          + setTipo()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace model {
      class br.com.apibancaria.model.Cliente {
          - cpf : String
          - dataNascimento : LocalDate
          - email : String
          - id : Long
          - nome : String
          - senha : String
          - telefone : String
          + getConta()
          + getCpf()
          + getDataNascimento()
          + getEmail()
          + getId()
          + getNome()
          + getSenha()
          + getStatus()
          + getTelefone()
          + setConta()
          + setCpf()
          + setDataNascimento()
          + setEmail()
          + setId()
          + setNome()
          + setSenha()
          + setStatus()
          + setTelefone()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace model {
      class br.com.apibancaria.model.Conta {
          - agencia : String
          - dataCriacao : LocalDateTime
          - id : Long
          - numeroConta : String
          - saldo : BigDecimal
          + getAgencia()
          + getCliente()
          + getDataCriacao()
          + getId()
          + getNumeroConta()
          + getSaldo()
          + getStatus()
          + setAgencia()
          + setCliente()
          + setDataCriacao()
          + setId()
          + setNumeroConta()
          + setSaldo()
          + setStatus()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace model {
      class br.com.apibancaria.model.Transacao {
          - dataHora : LocalDateTime
          - descricao : String
          - id : Long
          - saldoAnterior : BigDecimal
          - saldoPosterior : BigDecimal
          - valor : BigDecimal
          + Transacao()
          + Transacao()
          + getContaDestino()
          + getContaOrigem()
          + getDataHora()
          + getDescricao()
          + getId()
          + getSaldoAnterior()
          + getSaldoPosterior()
          + getTipo()
          + getValor()
          + setContaDestino()
          + setContaOrigem()
          + setDataHora()
          + setDescricao()
          + setId()
          + setSaldoAnterior()
          + setSaldoPosterior()
          + setTipo()
          + setValor()
      }
    }
  }
  

  br.com.apibancaria.model.ChavePix o-- br.com.apibancaria.model.Conta : conta
  br.com.apibancaria.model.ChavePix o-- br.com.apibancaria.enums.TipoChavePix : tipo
  br.com.apibancaria.model.Cliente o-- br.com.apibancaria.model.Conta : conta
  br.com.apibancaria.model.Cliente o-- br.com.apibancaria.enums.StatusCliente : status
  br.com.apibancaria.model.Conta o-- br.com.apibancaria.model.Cliente : cliente
  br.com.apibancaria.model.Conta o-- br.com.apibancaria.enums.StatusConta : status
  br.com.apibancaria.model.Transacao o-- br.com.apibancaria.model.Conta : contaDestino
  br.com.apibancaria.model.Transacao o-- br.com.apibancaria.model.Conta : contaOrigem
  br.com.apibancaria.model.Transacao o-- br.com.apibancaria.enums.TipoTransacao : tipo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
